k8s-resources/nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginxinc/nginx-unprivileged
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
        - name: config-volume
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: html-volume
        persistentVolumeClaim:
          claimName: nginx-pvc
      - name: config-volume
        configMap:
          name: nginx-configmap
