k8s-resources/nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: webapp
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
