k8s-resources/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-route
  namespace: webapp
spec:
  rules:
    - host: webapp.apps.test0.lab.linuxpolska.pl
      http:
        paths:
          - backend:
              service:
                name: nginx-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
